[package]
name = "rbx_ripper"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
roxmltree = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sanitize-filename = "0.5"
walkdir = "2"
rfd = "0.15"
sys-locale = "0.3"
rayon = "1.10"
image = "0.25"

[build-dependencies]
winres = "0.1"